# amiya

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  amiya.service  config.example.toml  install.sh  uninstall.sh
docs/: ARCHITECTURE.md  HOTKEYS.md  PLAN.md  TROUBLESHOOTING.md  niri-config-example.kdl  swhkd-config-example
src/: app.rs  bar.rs  config.rs  error.rs  events.rs  main.rs
src/backend/: mod.rs
src/backend/niri/: client.rs  events.rs  mod.rs  protocol.rs
src/backend/system/: audio.rs  backlight.rs  battery.rs  bluetooth.rs  media.rs  mod.rs  network.rs  power.rs
src/ipc/: mod.rs  niri.rs  protocol.rs  server.rs
src/overlays/: mod.rs  slider.rs
src/popups/: bluetooth.rs  manager.rs  media_control.rs  mod.rs  power.rs  wifi.rs
src/system/: audio.rs  backlight.rs  bluetooth.rs  network.rs
src/widgets/: battery.rs  clock.rs  mod.rs  system_info.rs  workspaces.rs
