[package]
name = "amiya"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI framework
gtk4 = { version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.4"
glib = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# System monitoring
sysinfo = "0.31"

# D-Bus for system integration
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Niri IPC (we'll implement our own lightweight version)
serde_json = "1.0"

# Utilities
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
clap = { version = "4.5", features = ["derive"] }

# File system watching for hotkeys
notify = "6.0"

# X11/Wayland display info
wayland-client = "0.31"

[[bin]]
name = "amiya-ctl"
path = "src/bin/amiya-ctl.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
